@@ -584,10 +584,9 @@ sub wait_till_is_up {
 
     my $server_up = sub {
         local $SIG{__WARN__} = sub {}; #avoid "cannot connect ..." warnings
-        if (my $r = Apache::TestRequest::GET('/index.html')) {
-            return $r->code;
-        }
-        0;
+        # avoid fatal errors when LWP is not available
+        my $r = eval { Apache::TestRequest::GET('/index.html') };
+        return !$@ && defined $r ? $r->code : 0;
     };
 
     if ($server_up->()) {
